csComp/includes/css/csStyles.css
/* ... */
.leaflet-contextmenu-icon {
    margin: 2px 8px 0 0;
    width: 16px;
    height: 16px;
    float: left;
    border: 0;
}

.leaflet-contextmenu-separator {
    border-bottom: 1px solid #ccc;
    margin: 5px 0;
}

/* timeline */

.focustimeContainer {
    bottom: 45px;
}

#timelinecontainer{
        pointer-events: none;
}

/* right panel */

.rightpanel-hidetab {
    background: #42145F
}
.rightpanel-header-icon {
    width: 30px;
    height: 24px;
    margin-left: 5px;
    float: left;
    margin-right: 10px;
}
.rightpanel-header-button {
    border: 0;
    margin-right: 5px;
    background: transparent;
}

/* Start StyleList */

.legend-description {
    display: block;
    font-size: 16px;
    color: blue;
}
.legend-entry-item-d {
    list-style-type: none;
    height: 25px;
}
.legend-entry-item-i {
    list-style-type: none;
    height: 40px;
}
.legend-color-square {
    display: inline;
    width: 20px;
    height: 20px;
    background: #4cff00;
    position: relative;
    left: -40px;
}
.legend-color-gradient-rect {
    display: inline;
    width: 30px;
    height: 40px;
    background: #4cff00;
    position: relative;
    left: -40px;
}
.legend-label-d {
    display: inline;
    font-size: 13px;
    position: relative;
    top: 2px;
    left: -25px;
}
.legend-label-i {
    display: inline;
    font-size: 13px;
    position: absolute;
    left: 55px;
}

/* End StyleList */


/* Start OfflineSearch */

.typeahead-group-header {
    margin-left: 10px;
    font-weight: bold;
    font-size: 120%;
}

/* End OfflineSearch */


/* Start Indicators */

.indicator-list {
    list-style: none;
    padding-left: 0;
}
.indicator-group {
    position: relative;
    cursor: pointer;
}

/*sparkline*/

.indicator-sparkline-group {
    height: 75px;
}
.indicator-sparkline-title {
    font-size: 20px;
    font-weight: bold;
}
.indicator-sparkline-value {
    font-size: 20px;
    font-weight: bold;
    right: 5px;
    position: absolute;
    bottom: 10px;
}

/*circular*/

.indicator-circular-group {
    height: 200px;
}
.indicator-circular-title {
    font-size: 20px;
    font-weight: 300;
}
.indicator-circular-value {
    font-size: 22px;
    font-weight: 800;
}
.isActive {
    background-color: #B5A3C1;
}
.indicatorwidget-title {
    text-align: center;
    font-size: 25px;
    font-weight: bold;
}

/* End Indicators */


/* Start FeatureRelations */

.relationgroup-title {
    font-size: 18px;
    font-weight: bold;
}
.relation-title {
    font-size: 16px;
}

/* End FeatureRelations */


/* Start LayersList */

.left-menu {
    background: url("../../cs/images/menu-left.png");
    background-position: right bottom;
    background-repeat: no-repeat;
    position: absolute;
    right: 3px;
    top: 0;
    width: 16px;
    height: 16px;
    cursor: pointer;
}
.menu {
    position: relative;
}
.menu > .dropdown-menu {
    position: static;
    display: block;
}

#featureTabs > .dropdown:hover .dropdown-menu {
    display: block;
    margin-top: 0;
 }

/* End LayersList */

.background-image {
    width: 100%;
    height: 100%;
    position: absolute;
}
.widgethover {
    opacity: 0.5;
}
.widget-entrance {
    -webkit-animation: fadeIn 1s
}
.widgeteditbutton {
    width: 25px;
    height: 25px;
    margin-top: 2px;
    margin-right: 2px;
    padding-top: 3px;
}
.widgeteditmode {
    background: gray;
    border-radius: 10px;
}
.dashboard-selection {
    border-bottom: transparent;
    border-bottom-style: solid;
    height: 50px;
}
.dashboardselectionactive {
    border-bottom: white;
    border-bottom-style: solid;
}
.dashboard-base {
    position: absolute;
    width: 100%;
    height: 100%;
    pointer-events: none
}
.dashboard-main {
    width: 100%;
    height: 100%;
    pointer-events: none;
    margin-top: -10px;
}
.dashboard-option {
    color: white;
    font-size: 20px;
    cursor: pointer;
}
.dashboard-option-selected {
    color: red;
}
.spinner {
    margin-right: 5px;
}
.btn-filter-delete {
    position: relative;
    right: 0;
    margin-top: 2px;
}
.filter-text {
    width: 200px;
}
.style-title {
    font-size: 14px;
}
.style-settings {
    position: relative;
    right: 5px;
}
.style-aspect {
    background-size: 18px;
    width: 18px;
    height: 18px;
}
/* ... */

